--- a/Wollump/packages.config
+++ b/Wollump/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="LibGit2Sharp" version="0.12.0.0" targetFramework="net45" />
   <package id="Nancy" version="0.17.1" targetFramework="net45" />
-  <package id="Nancy.Hosting.Aspnet" version="0.17.1" targetFramework="net45" />
+  <package id="Nancy.Hosting.Self" version="0.17.1" targetFramework="net45" />
 </packages>
