--- a/Wollump/packages.config
+++ b/Wollump/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="LibGit2Sharp" version="0.12.0.0" targetFramework="net45" />
   <package id="MarkdownSharp" version="1.13.0.0" targetFramework="net45" />
-  <package id="Nancy" version="0.17.1" targetFramework="net45" />
+  <package id="Nancy" version="0.18.0" targetFramework="net45" />
   <package id="Nancy.Hosting.Self" version="0.17.1" targetFramework="net45" />
+  <package id="Nancy.Viewengines.Razor" version="0.18.0" targetFramework="net45" />
+  <package id="System.Web.Razor.Unofficial" version="2.0.2" targetFramework="net45" />
 </packages>
