--- a/Wollump/Wollump.csproj
+++ b/Wollump/Wollump.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DebugRootPathProvider.cs" />
     <Compile Include="Models\PageModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
